# g0di.github.io

./: .dmypy.json  .gitignore  .pdm-python  Makefile  README.md  TODO.md  _config.yml  about.md  pelicanconf.py  publishconf.py  pyproject.toml
.github/workflows/: pelican.yml
_layouts/: home.html
_posts/: 2024-01-01-welcome-to-jekyll.markdown  2024-01-22-dont-use-python-property.md  2024-05-07-software-needs-to-be-more-expensive copy.md  2024-05-07-software-needs-to-be-more-expensive.md  2024-05-08-software-needs-to-be-more-expansive.md  2024-05-09-first-jobs-ai-will-replace.md  2024-05-09-software-needs-to-be-more-expensive.md  2024-06-25-one-way-to-fix-circular-imports.md  2024-06-25-three-laws-of-software-complexity.md  2024-07-11-debugger-doesnt-stop-at-breakpoints-with-pytest-if-pytest-cov-is-used  2024-07-11-debugger-doesnt-stop-at-breakpoints-with-pytest-if-pytest-cov-is-used.md  2024-07-25-testing-azure-eventhub-in-python.md  2024-08-02-Integrating-problem-details-rfc-with-fastapi.md  2024-09-27-python-packaging-is-great-now.md  2024-09-30-10-python-programming-optimisation-techniques.md  2024-10-01-practices-of-reliable-software-design.md  2024-10-02-modern-good-practices-for-python-development.md  2024-10-08-8-versions-of-uuid-and-when-to-use-them.md  2024-10-14-execute-a-function-until-a-specific-value-is-returned.md
assets/: style.css
cache/: ArticlesGenerator-Readers  PagesGenerator-Readers
content/Articles/: 2024-01-22-dont-use-python-property.md  2024-07-11-debugger-doesnt-stop-at-breakpoints-with-pytest-if-pytest-cov-is-used.md  (+1 more)
(+44 files in other folders)
