[project]
name = "g0di.github.io"
version = "0.1.0"
description = "Yet Another Dev's Blog"
authors = [{ name = "g0di", email = "benoit.godard.p@gmail.com" }]
dependencies = [
  "pelican[markdown]>=4.10.1",
  "pelican-seo>=1.2.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "pelican -v -r -l"
site = "pelican -v"
clean = "rm -rfv output && rm -rfv cache"
